# target-avro

./: .gitignore  README.md  pyproject.toml  sample_config.json  scripts.py
.github/workflows/: publish.yaml  test.yaml
target_avro/: __init__.py  converter.py
tests/: test_avro.py  test_datetime.py
tests/data/: schema.avsc.json  schema.json
