[tool.poetry]
name = "target-avro"
version = "0.1.0"
description = "Singer.io target for extracting data"
authors = ["inamura <inamura@kageboushi.app>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
singer-python = "^5"
smart_open = "^4.2.0"
fastavro = "^1.3.4"
strict_rfc3339 = "^0.7"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
isort = "^5.8.0"
black = "^20.8b1"

[tool.poetry.scripts]
target-avro = 'target_avro:main'
test = 'scripts:test'
lint = 'scripts:lint'
fmt = 'scripts:fmt'

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["target_avro", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "target_avro"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

